[tool.poetry]
name = "escape-velocity"
version = "0.1.0"
description = ""
authors = ["Anonymous4045 <contact@anon4045.email>"]
readme = "README.md"
packages = [{include = "escape_velocity"}]

[tool.poetry.dependencies]
python = "^3.10"
arcade = "^2.6.17"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
